# PyCreate

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: multi-platform.yml
codegen/: CMakeLists.txt
codegen/src/: cpp.cpp  hook.cpp  main.cpp  py.cpp
include/: important.hpp  json_types.hpp
lib/: main.c
